<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Mavericks</string>
	<string name="pivot_left">Pivot Left</string>
	<string name="pivot_right">Pivot Right</string>
	<string name="turn_left">Turn Left</string>
	<string name="turn_right">Turn Right</string>
	<string name="go_forward">Go Forward</string>
	<string name="go_backward">Go Backward</string>
	<string name="back_left">Back Left</string>
	<string name="back_right">Back Right</string>
	<string name="stop_moving">Stop Moving</string>
	<string name="command_sent">Command sent:\u0020</string>
	<string name="reply_received">Reply received:\u0020</string>
	<string name="ip_address">IP Address</string>
	<string name="ip_error">Invalid IP Address</string>

</resources>
