<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:padding="5dp" >

	<EditText
		android:id="@+id/ip_address"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:hint="@string/ip_address"
		android:inputType="text"
		android:singleLine="true" />

	<LinearLayout
		android:id="@+id/center_row"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:orientation="horizontal" >

		<ImageButton
			android:id="@+id/turn_left"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:contentDescription="@string/turn_left"
			android:onClick="onClick"
			android:src="@drawable/turn_left" />

		<ImageButton
			android:id="@+id/stop_moving"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:contentDescription="@string/stop_moving"
			android:onClick="onClick"
			android:src="@drawable/stop_moving" />

		<ImageButton
			android:id="@+id/turn_right"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:contentDescription="@string/turn_right"
			android:onClick="onClick"
			android:src="@drawable/turn_right" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/first_row"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_above="@id/center_row"
		android:orientation="horizontal" >

		<ImageButton
			android:id="@+id/pivot_left"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:contentDescription="@string/pivot_left"
			android:onClick="onClick"
			android:src="@drawable/pivot_left" />

		<ImageButton
			android:id="@+id/go_forward"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:contentDescription="@string/go_forward"
			android:onClick="onClick"
			android:src="@drawable/go_forward" />

		<ImageButton
			android:id="@+id/pivot_right"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:contentDescription="@string/pivot_right"
			android:onClick="onClick"
			android:src="@drawable/pivot_right" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/third_row"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/center_row"
		android:orientation="horizontal" >

		<ImageButton
			android:id="@+id/back_left"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:contentDescription="@string/go_backward"
			android:onClick="onClick"
			android:src="@drawable/back_left" />

		<ImageButton
			android:id="@+id/go_backward"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:contentDescription="@string/go_backward"
			android:onClick="onClick"
			android:src="@drawable/go_backward" />

		<ImageButton
			android:id="@+id/back_right"
			android:layout_width="match_parent"
			android:layout_height="100dp"
			android:layout_weight="1"
			android:contentDescription="@string/go_backward"
			android:onClick="onClick"
			android:src="@drawable/back_right" />
	</LinearLayout>

	<TextView
		android:id="@+id/status"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center"
		android:singleLine="true" />

</RelativeLayout>